[gd_scene load_steps=6 format=3 uid="uid://7dw8xyhwd53o"]

[ext_resource type="Script" path="res://Scenes/EventsRoom/gamble_event.gd" id="1_das3k"]
[ext_resource type="PackedScene" uid="uid://citmqnnx5h0l6" path="res://Scenes/EventsRoom/event_room_button.tscn" id="1_l1hpl"]
[ext_resource type="Texture2D" uid="uid://cjnfi0k448g7u" path="res://art/1bit/orcoArt/Sprite Fondos testeo6.png" id="2_sjgc0"]
[ext_resource type="PackedScene" uid="uid://dqeh5nty43nu7" path="res://Scenes/UI/torch.tscn" id="3_a1g57"]
[ext_resource type="FontFile" uid="uid://c3ns0nhty0opb" path="res://art/alagard.ttf" id="3_cieio"]

[node name="GambleEvent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_das3k")

[node name="Background" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_sjgc0")
centered = false
metadata/_edit_lock_ = true

[node name="torch" parent="." instance=ExtResource("3_a1g57")]
position = Vector2(45, 58)

[node name="torch2" parent="." instance=ExtResource("3_a1g57")]
position = Vector2(212, 58)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -35.0
offset_right = 75.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.333333, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_cieio")
theme_override_font_sizes/font_size = 16
text = "Stake your soulâ€™s Gold"
horizontal_alignment = 1

[node name="FiftyButton" parent="VBoxContainer" instance=ExtResource("1_l1hpl")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Risk 50 haunted gold: 50% chance 
to double or lose it to the void."

[node name="ThirtyButton" parent="VBoxContainer" instance=ExtResource("1_l1hpl")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Risk 50 haunted gold: 30% chance 
to quadruple or lose it to the void."

[node name="SkipButton" parent="VBoxContainer" instance=ExtResource("1_l1hpl")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Let the haunted coins lie
and leave."
